// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Saga: getFollowers when a request to the API fails should call a failure action 1`] = `
Object {
  "action": Object {
    "message": "it went wrong",
    "response": "test",
    "type": "FOLLOWERS_FAILURE",
  },
  "channel": null,
}
`;

exports[`Saga: getFollowers when requesting followers should call the API with the url and parameters 1`] = `
Object {
  "args": Array [
    "followers.net",
    Object {
      "params": Object {
        "per_page": 8,
      },
    },
  ],
  "context": null,
  "fn": [Function],
}
`;

exports[`Saga: getFollowers when requesting followers should put a success action with the normalized data 1`] = `
Object {
  "action": Object {
    "entities": Object {
      "users": Object {
        "1": Object {
          "id": 1,
          "login": "test",
        },
        "2": Object {
          "id": 2,
          "login": "hello",
        },
      },
    },
    "result": Array [
      1,
      2,
    ],
    "type": "FOLLOWERS_SUCCESS",
  },
  "channel": null,
}
`;

exports[`Saga: getRepos when a request to the API fails should call a failure action 1`] = `
Object {
  "action": Object {
    "message": "it went wrong",
    "response": "test",
    "type": "REPOS_FAILURE",
  },
  "channel": null,
}
`;

exports[`Saga: getRepos when requesting repos should call the API with the url and parameters 1`] = `
Object {
  "args": Array [
    "repos.net",
    Object {
      "params": Object {
        "per_page": 10,
        "sort": "pushed",
      },
    },
  ],
  "context": null,
  "fn": [Function],
}
`;

exports[`Saga: getRepos when requesting repos should put a success action with the normalized data 1`] = `
Object {
  "action": Object {
    "entities": Object {
      "repos": Object {
        "1": Object {
          "id": 1,
          "name": "test",
        },
        "2": Object {
          "id": 2,
          "name": "hello",
        },
      },
    },
    "result": Array [
      1,
      2,
    ],
    "type": "REPOS_SUCCESS",
  },
  "channel": null,
}
`;
